MP Instruction Implementation Work
- See #14, #7, #23, #30
- Re-implemented all existing MALU RTL.
- All previously implemented instruction unit tests passing.
- Adding unit test for `sub2.mp`
- Added ISE model for `sub2.mp`
- Need to add unit tests for `sub3`, `mac` and comparison instructions.
- Only RTL left to implement is for comparison instructions.

 On branch dev/ben-marshall
 Changes to be committed:
	modified:   docs/implementation.tex
	modified:   flow/icarus/waves-view.gtkw
	modified:   rtl/coprocessor/scarv_cop_malu.v
	modified:   verif/model/model_ise.v
	modified:   verif/unit/21-add3-mp.S
	new file:   verif/unit/28-sub2-mp.S

--- a/docs/implementation.tex
+++ b/docs/implementation.tex
@@ -595,12 +595,17 @@ ADD3.mp&
  & $rdm1\ASN tmp[63:32]$ 
 \\
 SUB2.mp&
- &
+   $tmp \ASN rs1 - rs2$ \newline
+   $rdm0\ASN tmp[31:0]$ 
+ & $rdm1\ASN tmp[63:32]$ 
  &
 \\
 SUB3.mp&
+   $tmp \ASN rs1 - rs2$ \newline
  &
- &
+   $tmp \ASN tmp - rs3$ \newline
+   $rdm0\ASN tmp[31:0]$ 
+ & $rdm1\ASN tmp[63:32]$ 
 \\
 ACC1.mp&
     $tmp \ASN (crd1 \CONS crd0) + rs1$\newline 
