MP Compare instruction work
Synchronised changes for modifying behaviour of and implementing
the MP compare instructions: `equ/ltu/gtu.mp`.

- Closes #7
 - Add unit tests and ISE models for all MP compare instructions.
- Closes #14
 - Implement RTL for the instructions in the `malu`.
 - Implement top level GPR writeback logic in `scarv_cop_top`
- Fixes #30
 - Documentation updates to change `crs1` -> `rs1`
 - Instruction encoding changes to account for wider `rs1` field.
 - Binutils patch changes for new instruction layouts and encodings.
 - Changes to decode RTL to make sure instruction subclass can
   uniquely identify all MP instructions.

 On branch dev/ben-marshall
 Changes to be committed:
	modified:   Makefile
	modified:   docs/ise-opcodes.txt
	modified:   docs/specification/spec-instr.tex
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   rtl/coprocessor/scarv_cop_common.vh
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_malu.v
	modified:   rtl/coprocessor/scarv_cop_top.v
	modified:   verif/model/model_ise.v
	new file:   verif/unit/31-equ-mp.S
	new file:   verif/unit/32-ltu-mp.S
	new file:   verif/unit/33-gtu-mp.S

--- a/docs/specification/spec-instr.tex
+++ b/docs/specification/spec-instr.tex
@@ -1016,58 +1016,55 @@ $\TUPLE{ 2, 1 }$ is invalid because it violates the  odd-even'ness rule.
 
 % -----------------------------------------------------------------------------
 
-% TODO: crs3 -> rs3
-\XCINSTR{EQU.mp}{rd, crs1, crs2, crs3}{
+\XCINSTR{EQU.mp}{rd, rs1, crs2, crs3}{
   \ienceqump
 }{
   Compute a ``chained'' (or ``long'') 
   equality 
   comparison between
-  $\XCR[*][{\VERB[RV]{crs1}}]$
+  $\XCR[*][{\VERB[RV]{crs2}}]$
   and
-  $\XCR[*][{\VERB[RV]{crs2}}]$,
+  $\XCR[*][{\VERB[RV]{crs3}}]$,
   forming some $i$-th step within a multi-precision comparison.
 }{
-  $t_0 \ASN \XCR[*][{\VERB[RV]{crs1}}] = \XCR[*][{\VERB[RV]{crs2}}]$ \;
-  $\GPR[*][{\VERB[RV]{rd}}] \ASN t_1            \AND \XCR[*][{\VERB[RV]{crs3}}]  $ \;
+  $t_0 \ASN \XCR[*][{\VERB[RV]{crs2}}] = \XCR[*][{\VERB[RV]{crs3}}]$ \;
+  $\GPR[*][{\VERB[RV]{rd}}] \ASN t_0            \AND \GPR[*][{\VERB[RV]{rs1}}]  $ \;
 }
 
 % -----------------------------------------------------------------------------
 
-% TODO: crs3 -> rs3
-\XCINSTR{LTU.mp}{rd, crs1, crs2, crs3}{
+\XCINSTR{LTU.mp}{rd, rs1, crs2, crs3}{
   \iencltump
 }{
   Compute a ``chained'' (or ``long'') 
      less-than
   comparison between
-  $\XCR[*][{\VERB[RV]{crs1}}]$
+  $\XCR[*][{\VERB[RV]{crs2}}]$
   and
-  $\XCR[*][{\VERB[RV]{crs2}}]$,
+  $\XCR[*][{\VERB[RV]{crs3}}]$,
   forming some $i$-th step within a multi-precision comparison.
 }{
-  $t_0 \ASN \XCR[*][{\VERB[RV]{crs1}}] = \XCR[*][{\VERB[RV]{crs2}}]$ \;
-  $t_1 \ASN \XCR[*][{\VERB[RV]{crs1}}] < \XCR[*][{\VERB[RV]{crs2}}]$ \;
-  $\GPR[*][{\VERB[RV]{rd}}] \ASN t_1 \IOR ( t_0 \AND \XCR[*][{\VERB[RV]{crs3}}] )$ \;
+  $t_0 \ASN \XCR[*][{\VERB[RV]{crs2}}] = \XCR[*][{\VERB[RV]{crs3}}]$ \;
+  $t_1 \ASN \XCR[*][{\VERB[RV]{crs2}}] < \XCR[*][{\VERB[RV]{crs3}}]$ \;
+  $\GPR[*][{\VERB[RV]{rd}}] \ASN t_1 \IOR ( t_0 \AND \GPR[*][{\VERB[RV]{rs1}}] )$ \;
 }
 
 % -----------------------------------------------------------------------------
 
-% TODO: crs3 -> rs3
-\XCINSTR{GTU.mp}{rd, crs1, crs2, crs3}{
+\XCINSTR{GTU.mp}{rd, rs1, crs2, crs3}{
   \iencgtump
 }{
   Compute a ``chained'' (or ``long'') 
   greater-than
   comparison between
-  $\XCR[*][{\VERB[RV]{crs1}}]$
+  $\XCR[*][{\VERB[RV]{crs2}}]$
   and
-  $\XCR[*][{\VERB[RV]{crs2}}]$,
+  $\XCR[*][{\VERB[RV]{crs3}}]$,
   forming some $i$-th step within a multi-precision comparison.
 }{
-  $t_0 \ASN \XCR[*][{\VERB[RV]{crs1}}] = \XCR[*][{\VERB[RV]{crs2}}]$ \;
-  $t_1 \ASN \XCR[*][{\VERB[RV]{crs1}}] > \XCR[*][{\VERB[RV]{crs2}}]$ \;
-  $\GPR[*][{\VERB[RV]{rd}}] \ASN t_1 \IOR ( t_0 \AND \XCR[*][{\VERB[RV]{crs3}}] )$ \;
+  $t_0 \ASN \XCR[*][{\VERB[RV]{crs2}}] = \XCR[*][{\VERB[RV]{crs3}}]$ \;
+  $t_1 \ASN \XCR[*][{\VERB[RV]{crs2}}] > \XCR[*][{\VERB[RV]{crs3}}]$ \;
+  $\GPR[*][{\VERB[RV]{rd}}] \ASN t_1 \IOR ( t_0 \AND \GPR[*][{\VERB[RV]{rs1}}] )$ \;
 }
 
 % =============================================================================
