Specification: Changelog and semantic version bump.
- Semantic version bump due to non-backward compatible changes to
  MP instruction encodings.
 On branch master
 Your branch is ahead of 'origin/master' by 35 commits.
   (use "git push" to publish your local commits)

 Changes to be committed:
	modified:   docs/shared-version.tex
	modified:   docs/specification/appx-changelog.tex

--- a/docs/specification/appx-changelog.tex
+++ b/docs/specification/appx-changelog.tex
@@ -1,5 +1,13 @@
 % =============================================================================
 
+\paragraph{Draft-6}
+\begin{itemize}
+\item Modify how MP compare instructions work. Flag now written too {\em and}   
+    read from the GPRs, never the CPRs.
+\item Numerous formatting changes to make everything clearer / easier to
+    manage.
+\end{itemize}
+
 \paragraph{Draft-5}
 \begin{itemize}
 \item Add {\tt mccr} CSR and describe ISE feature sets.
