Record bug in trophy cabinet

--- a/docs/implementation/verify.tex
+++ b/docs/implementation/verify.tex
@@ -63,6 +63,7 @@ verification flow.
 \item Scatter/Gather instruction addresses were not correctly registered
     by the formal verification interface.
 \item Scatter instructions set write enable but no byte enable bits.
+\item {\tt gtu.mp} Instruction gave incorrect result iff crs2==crs3.
 \end{itemize}
 
 \subsection{Constrained Random Flow}
