--- a/docs/implementation/verify.tex
+++ b/docs/implementation/verify.tex
@@ -64,6 +64,10 @@ verification flow.
     by the formal verification interface.
 \item Scatter instructions set write enable but no byte enable bits.
 \item {\tt gtu.mp} Instruction gave incorrect result iff crs2==crs3.
+\item {\tt srl.mp} and {\tt sll.mp} didn't give a 0 result if the shift
+    amount was out of bounds.
+\item {\tt mac.mp} was missing the final addition writeback due to not
+    storing temporaries properly.
 \end{itemize}
 
 \subsection{Constrained Random Flow}
