Fix bugs with mul.px
- Stop writing intermediate results back to the register file.
- Fix masking of shifted partial sums.

 On branch dev/ben-marshall
 Changes to be committed:
	modified:   docs/implementation/verify.tex
	modified:   rtl/coprocessor/scarv_cop_palu.v
	modified:   rtl/coprocessor/scarv_cop_palu_multiplier.v

 Changes not staged for commit:
	modified:   rtl/coprocessor/scarv_cop_malu.v

--- a/docs/implementation/verify.tex
+++ b/docs/implementation/verify.tex
@@ -68,6 +68,8 @@ verification flow.
     amount was out of bounds.
 \item {\tt mac.mp} was missing the final addition writeback due to not
     storing temporaries properly.
+\item {\tt mul.px} did not mask partial sums properly and was writing
+    intermediate results to the register file.
 \end{itemize}
 
 \subsection{Constrained Random Flow}
