added authors + affiliation (not sure why I missed this originally ...); removed shared-X.tex since this seemed pointless

--- a/docs/implementation.tex
+++ b/docs/implementation.tex
@@ -2,9 +2,17 @@
 
 \usepackage{shared} \addbibresource{shared.bib}
 
-\title{RISC-V \XCID ISE \\ Reference Implementation}
-\author{\input{shared-authors.tex}}
-\date{Version $\input{shared-version.tex}$ (\today)}
+\title{RISC-V \XCID ISE Reference Implementation}
+\date{Version $1.0.5$ (\today)}
+\author{Ben Marshall}
+\author{Daniel Page}
+\author{Thinh Pham}
+\affil{
+Department of Computer Science, University of Bristol,\\
+Merchant Venturers Building, Woodland Road,\\
+Bristol, BS8 1UB, United Kingdom.\\
+\url{{ben.marshall,daniel.page,th.pham}@bristol.ac.uk}
+}
 
 \begin{document}
 
