--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -3,6 +3,7 @@
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage[plain,shortend]{algorithm2e}
+\usepackage{authblk}
 \usepackage[backend=biber,style=numeric]{biblatex}
 \usepackage{bytefield}
 \usepackage{booktabs}
