Rename MV2GPR -> xcr2gpr

--- a/docs/specification/appx-syntax.tex
+++ b/docs/specification/appx-syntax.tex
@@ -16,7 +16,7 @@ Class                 & Syntax                  & Section                       
 \hline
 \endlastfoot
 \endfoot
-\multirow{10}{*}{1}   & \XCSYNTAXUSE{MV2GPR}    & \REFSEC{sec:spec:instr:MV2GPR}    \\
+\multirow{10}{*}{1}   & \XCSYNTAXUSE{XCR2GPR}    & \REFSEC{sec:spec:instr:XCR2GPR}    \\
                       & \XCSYNTAXUSE{MV2COP}    & \REFSEC{sec:spec:instr:MV2COP}    \\
                       & \XCSYNTAXUSE{CMOV.cr}   & \REFSEC{sec:spec:instr:CMOV.cr}   \\
                       & \XCSYNTAXUSE{CMOVN.cr}  & \REFSEC{sec:spec:instr:CMOVN.cr}  \\
