--- a/docs/specification/spec-instr.tex
+++ b/docs/specification/spec-instr.tex
@@ -10,8 +10,8 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MV2GPR}{rd, crs1}{
-  \iencmvtwogpr
+\XCINSTR{XCR2GPR}{rd, crs1}{
+  \iencxcrtwogpr
 }{
   Move a $\XCR$ register to a $\GPR$ register.
 }{ 
