mv2cop -> gpr2xcr
 On branch dev/renaming
 Changes to be committed:
	modified:   docs/ise-opcodes.txt
	modified:   docs/proposal.txt
	modified:   docs/specification/appx-changelog.tex
	modified:   docs/specification/appx-syntax.tex
	modified:   docs/specification/bg-feature.tex
	modified:   docs/specification/spec-instr.tex
	modified:   examples/integration-test/copmv.x.S
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   flow/icarus/waves-view.gtkw
	modified:   flow/yosys/Makefile
	modified:   rtl/coprocessor/scarv_cop_common.vh
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_palu.v
	modified:   verif/formal/fml_chk_instr_mv2cop.v
	modified:   verif/model/model_ise.v
	modified:   verif/unit/00-mvcop.S
	modified:   verif/unit/01-cmov.S
	modified:   verif/unit/02-li.S
	modified:   verif/unit/03-bop.S
	modified:   verif/unit/04-ins-ext.S
	modified:   verif/unit/08-load.S
	modified:   verif/unit/10-load-h.S
	modified:   verif/unit/11-load-b.S
	modified:   verif/unit/12-store-w.S
	modified:   verif/unit/13-store-h.S
	modified:   verif/unit/14-store-b.S
	modified:   verif/unit/15-gather-b.S
	modified:   verif/unit/16-scatter-b.S
	modified:   verif/unit/17-gather-h.S
	modified:   verif/unit/18-scatter-h.S
	modified:   verif/unit/19-random.S

--- a/docs/specification/appx-syntax.tex
+++ b/docs/specification/appx-syntax.tex
@@ -17,7 +17,7 @@ Class                 & Syntax                  & Section                       
 \endlastfoot
 \endfoot
 \multirow{10}{*}{1}   & \XCSYNTAXUSE{XCR2GPR}    & \REFSEC{sec:spec:instr:XCR2GPR}    \\
-                      & \XCSYNTAXUSE{MV2COP}    & \REFSEC{sec:spec:instr:MV2COP}    \\
+                      & \XCSYNTAXUSE{GPR2XCR}    & \REFSEC{sec:spec:instr:GPR2XCR}    \\
                       & \XCSYNTAXUSE{CMOV.cr}   & \REFSEC{sec:spec:instr:CMOV.cr}   \\
                       & \XCSYNTAXUSE{CMOVN.cr}  & \REFSEC{sec:spec:instr:CMOVN.cr}  \\
                       & \XCSYNTAXUSE{LBU.cr}    & \REFSEC{sec:spec:instr:LBU.cr}    \\
