--- a/docs/specification/bg-feature.tex
+++ b/docs/specification/bg-feature.tex
@@ -101,7 +101,7 @@ to said state.
 \subparagraph{Register-register data transfer.}
 
 A suite of instructions
-(e.g., \VERB[RV]{MV2COP.cr})
+(e.g., \VERB[RV]{GPR2XCR.cr})
 that allow 
 transfer of content between
 the general-purpose register file (i.e., $\GPR$)
