--- a/docs/specification/spec-instr.tex
+++ b/docs/specification/spec-instr.tex
@@ -20,8 +20,8 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{MV2COP}{crd, rs1}{
-  \iencmvtwocop
+\XCINSTR{GPR2XCR}{crd, rs1}{
+  \iencgprtwoxcr
 }{
   Move a $\GPR$ register to a $\XCR$ register.
 }{
