Rename instructions mix,ext,ins,bop
 On branch dev/renaming
 Changes to be committed:
	modified:   docs/ise-opcodes.txt
	modified:   docs/shared.bib
	modified:   docs/specification/appx-design.tex
	modified:   docs/specification/bg-concept.tex
	modified:   docs/specification/intro.tex
	modified:   docs/specification/spec-instr.tex
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   flow/icarus/waves-view.gtkw
	modified:   rtl/coprocessor/scarv_cop_common.vh
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_palu.v
	modified:   rtl/coprocessor/scarv_cop_rng.v
	renamed:    verif/formal/fml_chk_instr_bop_cr.v -> verif/formal/fml_chk_instr_bop.v
	renamed:    verif/formal/fml_chk_instr_ext_cr.v -> verif/formal/fml_chk_instr_ext.v
	renamed:    verif/formal/fml_chk_instr_ins_cr.v -> verif/formal/fml_chk_instr_ins.v
	renamed:    verif/formal/fml_chk_instr_hmix_cr.v -> verif/formal/fml_chk_instr_mix_h.v
	renamed:    verif/formal/fml_chk_instr_lmix_cr.v -> verif/formal/fml_chk_instr_mix_l.v
	modified:   verif/model/model_ise.v
	modified:   verif/unit/03-bop.S
	modified:   verif/unit/04-ins-ext.S

--- a/docs/shared.bib
+++ b/docs/shared.bib
@@ -892,7 +892,7 @@
 
 @phdthesis{SCARV:Fournier:07,
   author       = {J.J.A. Fournier},
-  title        = {Vector microprocessors for cryptography}, 
+  title        = {Vector microprocessors fioryptography}, 
   school       = {University of Cambridge},
   year         = {2007}
 }
