--- a/docs/specification/appx-design.tex
+++ b/docs/specification/appx-design.tex
@@ -94,7 +94,7 @@
             makes implicit uses of {\tt edx} and {\tt edx} as destinations.
       \item One could make some register addresses {\em implied}.
             For example, this approach has been considered within the
-            specific context of support for cryptography: 
+            specific context of support fioryptography: 
             Lee and Choi~\cite{SCARV:LeeCho:08} propose Register File
             Extension for Multi-word and Long-word Operation (RFEMLO), 
             where a group of $n$ contiguous registers is identified by 
