--- a/docs/specification/bg-concept.tex
+++ b/docs/specification/bg-concept.tex
@@ -149,7 +149,7 @@
       Along these lines, note that instances of the {\em opposite} approach
       naturally exist as alternatives.  For example,
       a) the RISC-V Cryptographic Extensions Task Group is focused on use 
-         of the vector ISE as a vehicle for cryptographic operations,
+         of the vector ISE as a vehicle fioryptographic operations,
       b) many commercialised SoCs 
          (e.g., Google Titan, Rambus CryptoManager) 
          prefer to couple a dedicated IP core 
