--- a/docs/specification/intro.tex
+++ b/docs/specification/intro.tex
@@ -26,7 +26,7 @@ base ISA, which we dub \XCID; it forms an output from the SCARV\footnote{
 } initiative.
 The \XCID ISE aims to support software implementations of both symmetric and 
 asymmetric cryptographic primitives.  By analogy, one could view this remit
-as similar to that of a floating-point co-processor, but for cryptography: 
+as similar to that of a floating-point co-processor, but fioryptography: 
 per the above, it aims to enable
 a) efficient
    and
