Rename all packed arithmetic instructions.
 On branch dev/renaming
 Changes to be committed:
	modified:   docs/implementation/verify.tex
	modified:   docs/ise-opcodes.txt
	modified:   docs/specification/spec-instr.tex
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   flow/icarus/waves-view.gtkw
	modified:   rtl/coprocessor/scarv_cop_common.vh
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_palu.v
	renamed:    verif/formal/fml_chk_instr_add_px.v -> verif/formal/fml_chk_instr_padd.v
	renamed:    verif/formal/fml_chk_instr_mul_px.v -> verif/formal/fml_chk_instr_pmul_l.v
	renamed:    verif/formal/fml_chk_instr_rot_px.v -> verif/formal/fml_chk_instr_prot.v
	renamed:    verif/formal/fml_chk_instr_roti_px.v -> verif/formal/fml_chk_instr_prot_i.v
	renamed:    verif/formal/fml_chk_instr_sll_px.v -> verif/formal/fml_chk_instr_psll.v
	renamed:    verif/formal/fml_chk_instr_slli_px.v -> verif/formal/fml_chk_instr_psll_i.v
	renamed:    verif/formal/fml_chk_instr_srl_px.v -> verif/formal/fml_chk_instr_psrl.v
	renamed:    verif/formal/fml_chk_instr_srli_px.v -> verif/formal/fml_chk_instr_psrl_i.v
	renamed:    verif/formal/fml_chk_instr_sub_px.v -> verif/formal/fml_chk_instr_psub.v
	modified:   verif/model/model_ise.v
	modified:   verif/unit/05-packed-arith-add.S
	modified:   verif/unit/05-packed-arith-mul.S
	modified:   verif/unit/05-packed-arith-sub.S
	modified:   verif/unit/06-packed-shift.S
	modified:   verif/unit/07-packed-shifti.S

--- a/docs/specification/spec-instr.tex
+++ b/docs/specification/spec-instr.tex
@@ -421,7 +421,7 @@ $
 % -----------------------------------------------------------------------------
 
 \XCINSTR{ADD.px}{pw, crd, crs1, crs2}{
-  \iencaddpx
+  \iencpadd
 }{
   Compute a   register-based packed addition, 
   implying $\odot = +$.
@@ -439,7 +439,7 @@ $
 % -----------------------------------------------------------------------------
 
 \XCINSTR{SUB.px}{pw, crd, crs1, crs2}{
-  \iencsubpx
+  \iencpsub
 }{
   Compute a   register-based packed subtraction, 
   implying $\odot = -$.
@@ -457,7 +457,7 @@ $
 % -----------------------------------------------------------------------------
 
 \XCINSTR{MUL.px}{pw, crd, crs1, crs2}{
-  \iencmulpx
+  \iencpmull
 }{
   Compute a   register-based packed multiplication, 
   implying $\odot = \times$.
@@ -475,7 +475,7 @@ $
 % -----------------------------------------------------------------------------
 
 \XCINSTR{SLL.px}{pw, crd, crs1, crs2}{
-  \iencsllpx
+  \iencpsll
 }{
   Compute a   register-based packed left-shift,
   implying $\odot = \LSH$.
@@ -502,7 +502,7 @@ $
 
 % TODO: cshamt => pshamt ?
 \XCINSTR{SLLI.px}{pw, crd, crs1, cshamt}{
-  \iencsllipx
+  \iencpsll
 }{
   Compute an immediate-based packed left-shift,
   implying $\odot = \LSH$.
@@ -528,7 +528,7 @@ $
 % -----------------------------------------------------------------------------
 
 \XCINSTR{SRL.px}{pw, crd, crs1, crs2}{
-  \iencsrlpx
+  \iencpsrl
 }{
   Compute a   register-based packed right-shift,
   implying $\odot = \RSH$.
@@ -555,7 +555,7 @@ $
 
 % TODO: cshamt => pshamt ?
 \XCINSTR{SRLI.px}{pw, crd, crs1, cshamt}{
-  \iencsrlipx
+  \iencpsrl
 }{
   Compute an immediate-based packed left-shift,
   implying $\odot = \RSH$.
@@ -581,7 +581,7 @@ $
 % -----------------------------------------------------------------------------
 
 \XCINSTR{ROT.px}{pw, crd, crs1, crs2}{
-  \iencrotpx
+  \iencprot
 }{
   Compute a   register-based packed left-rotate,
   implying $\odot = \LRT$.
@@ -603,7 +603,7 @@ $
 % -----------------------------------------------------------------------------
 
 \XCINSTR{ROTI.px}{pw, crd, crs1, cshamt}{
-  \iencrotipx
+  \iencproti
 }{
   Compute an immediate-based packed left-rotate,
   implying $\odot = \LRT$.
