Rename instructions twid.* to pperm.*
 On branch dev/renaming
 Changes to be committed:
	modified:   docs/ise-opcodes.txt
	modified:   docs/proposal.txt
	modified:   docs/specification/appx-syntax.tex
	modified:   docs/specification/spec-instr.tex
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   flow/icarus/waves-view.gtkw
	modified:   rtl/coprocessor/scarv_cop_common.vh
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_palu.v
	renamed:    verif/formal/fml_chk_instr_twid_c0.v -> verif/formal/fml_chk_instr_pperm_b0.v
	renamed:    verif/formal/fml_chk_instr_twid_c1.v -> verif/formal/fml_chk_instr_pperm_b1.v
	renamed:    verif/formal/fml_chk_instr_twid_c2.v -> verif/formal/fml_chk_instr_pperm_b2.v
	renamed:    verif/formal/fml_chk_instr_twid_c3.v -> verif/formal/fml_chk_instr_pperm_b3.v
	renamed:    verif/formal/fml_chk_instr_twid_n0.v -> verif/formal/fml_chk_instr_pperm_h0.v
	renamed:    verif/formal/fml_chk_instr_twid_n1.v -> verif/formal/fml_chk_instr_pperm_h1.v
	renamed:    verif/formal/fml_chk_instr_twid_b.v -> verif/formal/fml_chk_instr_pperm_w.v
	modified:   verif/model/model_ise.v
	modified:   verif/unit/09-twid.S

--- a/docs/specification/appx-syntax.tex
+++ b/docs/specification/appx-syntax.tex
@@ -52,7 +52,7 @@ Class                 & Syntax                  & Section                       
                       & \XCSYNTAXUSE{SRLI.px}   & \REFSEC{sec:spec:instr:SRLI.px}   \\
                       & \XCSYNTAXUSE{ROT.px}    & \REFSEC{sec:spec:instr:ROT.px}    \\
                       & \XCSYNTAXUSE{ROTI.px}   & \REFSEC{sec:spec:instr:ROTI.px}   \\
-                      & \XCSYNTAXUSE{TWID.B}    & \REFSEC{sec:spec:instr:TWID.B}    \\
+                      & \XCSYNTAXUSE{PPERM.W}    & \REFSEC{sec:spec:instr:PPERM.W}    \\
                       & \XCSYNTAXUSE{TWID.Nx}   & \REFSEC{sec:spec:instr:TWID.Nx}   \\
                       & \XCSYNTAXUSE{TWID.Cx}   & \REFSEC{sec:spec:instr:TWID.Cx}   \\
 \hline
